--- a/front/index.html
+++ b/front/index.html
@@ -1,20 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Green Click</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Digital Carbon Footprint Calculator</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1 class="title">Green Click</h1>
-    <form id="form" class="box">
-        <input type="number" id="tiktok_time" placeholder="0" required />
-        <input type="number" id="netflix_time" placeholder="0" required />
-        <button class="button" type="submit">Submit</button>
-    </form>
+    <div class="container">
+        <h1>Digital Carbon Footprint Calculator</h1>
+        <p>Help us understand your weekly online activity to estimate its environmental impact.</p>
+        
+        <div class="slider-container">
+            <label for="socialMedia">Social Media (hours/week)</label>
+            <input type="range" min="0" max="20" value="0" class="slider" id="socialMedia">
+            <div class="value-display" id="socialMediaValue">0 hours</div>
+        </div>
 
-  <script src="script.js"></script>
+        <div class="slider-container">
+            <label for="streaming">Video Streaming (hours/week)</label>
+            <input type="range" min="0" max="20" value="0" class="slider" id="streaming">
+            <div class="value-display" id="streamingValue">0 hours</div>
+        </div>
+
+        <div class="slider-container">
+            <label for="gaming">Online Gaming (hours/week)</label>
+            <input type="range" min="0" max="20" value="0" class="slider" id="gaming">
+            <div class="value-display" id="gamingValue">0 hours</div>
+        </div>
+
+        <div class="slider-container">
+            <label for="videoConference">Video Conferencing (hours/week)</label>
+            <input type="range" min="0" max="20" value="0" class="slider" id="videoConference">
+            <div class="value-display" id="videoConferenceValue">0 hours</div>
+        </div>
+
+        <button onclick="calculateAndRedirect()">Calculate My Impact</button>
+    </div>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
-
