Suvery Response and Personalized Feedback

--- a/front/results.html
+++ b/front/results.html
@@ -20,6 +20,11 @@
             <p id="breakdownDetails">Details of your emissions</p>
         </div>
 
+        <div class="result-section personalized-tips">
+            
+        </div>
+        
+
         <div>
             <h2>Eco-Friendly Tips</h2>
             <div class="tip">
@@ -30,6 +35,16 @@
             </div>
             <div class="tip">
                 <strong>Tip 3:</strong> Use energy-efficient devices and modes
+            </div>
+            <div class="tip">
+                <strong>Tip 4:</strong> Delete old emails and clean up storage to reduce server loads.
+            </div>
+            <div class="tip">
+                <strong>Tip 5:</strong> Use Wi-Fi instead of mobile data—it's more energy-efficient.
+            </div>
+            <div class="tip">
+                <strong>Tip 6:</strong> Use search engines like <strong>Ecosia</strong> and <strong>Lilo</strong> to do your searches. These are more eco-friendly browsers.
+                For example, Ecosia dedicates 100% of its profit to the planet.
             </div>
         </div>
 
@@ -63,9 +78,10 @@
                     <select name="surprisingActivity" id="surprisingActivity">
                         <option value="">Select an activity</option>
                         <option value="socialMedia">Social Media</option>
-                        <option value="streaming">Video Streaming</option>
-                        <option value="gaming">Online Gaming</option>
-                        <option value="videoConference">Video Conferencing</option>
+                        <option value="videoStreaming">Video Streaming</option>
+                        <option value="texting">Texting</option>
+                        <option value="emails">Emails</option>
+                        <option value="googleSearches">Google Searches</option>
                         <option value="none">None of them</option>
                     </select>
                 </div>
